--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,11 @@
     <string name="refine">Refine</string>
     <string name="results">Results</string>
     <string name="back">Back</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
+        AIzaSyB-7p5F-Fz_fD8LPj0rxOh-A1hBAFdHOxU
+    </string>
+    <string name="google_app_id">123456789012</string>
 </resources>
